--- a/Security Growler Light.app/Contents/Resources/AppSettings.plist
+++ b/Security Growler Light.app/Contents/Resources/AppSettings.plist
@@ -20644,13 +20644,13 @@
 	<key>Suffixes</key>
 	<array/>
 	<key>TextBackground</key>
-	<string>#dadada</string>
+	<string>#ffffff</string>
 	<key>TextEncoding</key>
 	<integer>4</integer>
 	<key>TextFont</key>
 	<string>Menlo-Regular</string>
 	<key>TextForeground</key>
-	<string>#1b1b1b</string>
+	<string>#000000</string>
 	<key>TextSize</key>
 	<real>12</real>
 	<key>UniformTypes</key>
